@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.9-7
-Date: 2012-12-19
+Date: 2012-12-20
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
