@@ -53,9 +53,14 @@ mapPlot <- function(longitude, latitude, longitudelim, latitudelim, grid,
     d <- c(0, sqrt(diff(x)^2 + diff(y)^2))
     d[!is.finite(d)] <- 0          # FIXME: ok?
     dc <- as.numeric(quantile(d, 1-100*(1/length(x)), na.rm=TRUE)) # FIXME: criterion
+    ##cat("dc=", dc, "vs dx=", diff(par('usr')[1:2]),"\n")
     bad <- d > dc
+    ##X<<-x # FIXME: debugging
+    ##Y<<-y # FIXME: debugging
     x[bad] <- NA                       # FIXME: should finish off polygons
     y[bad] <- NA
+    ##XX <<- x
+    ##YY <<- y
     if (limitsGiven) {
         box <- mapproject(c(longitudelim[1], longitudelim[1],
                             longitudelim[2], longitudelim[2]),
